--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,8 @@ server:
   port: 8080
 
 spring:
+  flyway:
+    baseline-on-migrate: true
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: # EXTERNAL
@@ -10,7 +12,9 @@ spring:
   jpa:
     database: MYSQL
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
+liquibase:
+  manual: true
 jwt:
   secret: # EXTERNAL
   expirationInMs: # EXTERNAL
